# cmake-project-template

./: .clang-format  .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  README.md
cmake/: FetchDependency.cmake  GetGitVersion.cmake
src/: project_interface.cpp
tests/: CMakeLists.txt  includes.h  test_case_1.cpp
